# Bias_Variance_DiagnosticTool

./: .gitignore  CHANGELOG.md  LIBRARY_USAGE.md  README.md  pyproject.toml  run.py
configs/: default.yaml  example_creditcard.yaml  lasso.yaml  logistic_reg.yaml  logistic_reg_balanced.yaml  nn.yaml  ridge.yaml  tree.yaml
evaluation/: eval_builtin_datasets.py  run_benchmarks.py  run_sensitivity_ablation.py
evaluation/forced_testing/: force_run_imbalanced.py
examples/: example_library_usage.py
src/diagnoser/: __init__.py  api.py  diagnoser.py  pipeline.py
src/diagnoser/checks/: sanity_checks.py
src/diagnoser/curves/: learning_curve.py  sampling.py
src/diagnoser/data/: __init__.py  loader.py  processing.py
src/diagnoser/diagnosis/: data_quality.py  recommendations.py  rules.py
src/diagnoser/metrics/: metrics.py
src/diagnoser/models/: builder.py  nn_models.py  sklearn_models.py
src/diagnoser/reporting/: plots.py  report.py
src/diagnoser/utils/: io.py  seed.py
tests/: test_diagnosis_rules.py  test_learning_curve.py  test_library_api.py  test_metrics.py
